--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,13 @@
     android:orientation="vertical"
     android:weightSum="8">
 
+
+
     <TextView
         android:layout_width="match_parent"
         android:layout_margin="10dp"
         android:layout_weight="2"
+        android:id="@+id/viewAnswer"
         android:layout_height="0dp"
         android:text="Hello World!"/>
 
@@ -26,35 +29,40 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnMC" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnMR" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnMS" />
 
         <Button
             android:id="@+id/button4"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnMPlus" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnMMin" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,35 +78,40 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="50dp"
+            android:text="@string/btnDel" />
 
         <Button
             android:id="@+id/button7"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnCE" />
 
         <Button
             android:id="@+id/button8"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnClear" />
 
         <Button
             android:id="@+id/button9"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnChange" />
 
         <Button
             android:id="@+id/button10"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnRoot" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -114,35 +127,40 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btn7" />
 
         <Button
             android:id="@+id/button12"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btn8" />
 
         <Button
             android:id="@+id/button13"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btn9" />
 
         <Button
             android:id="@+id/button14"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnDiv" />
 
         <Button
             android:id="@+id/button15"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnPer" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -158,41 +176,47 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btn4" />
 
         <Button
             android:id="@+id/button17"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btn5" />
 
         <Button
             android:id="@+id/button18"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btn6" />
 
         <Button
             android:id="@+id/button19"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnMulti" />
 
         <Button
             android:id="@+id/button20"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="25sp"
+            android:text="@string/btnUnKnow" />
     </LinearLayout>
 
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_weight="2"
     android:layout_marginHorizontal="10dp"
+        android:layout_marginBottom="10dp"
     android:layout_height="0dp"
     android:orientation="horizontal"
     android:weightSum="5">
@@ -216,28 +240,34 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:onClick="onBtn1Click"
+                android:textSize="25sp"
+                android:text="@string/btn1" />
 
             <Button
                 android:id="@+id/button26"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:onClick="onBtn2Click"
+                android:textSize="25sp"
+                android:text="@string/btn2" />
 
             <Button
                 android:id="@+id/button27"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:textSize="25sp"
+                android:text="@string/btn3" />
 
             <Button
                 android:id="@+id/button28"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:textSize="25sp"
+                android:text="@string/btnMin" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -252,34 +282,39 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:text="Button" />
+                android:textSize="25sp"
+                android:text="@string/btn0"/>
 
             <Button
                 android:id="@+id/button30"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:textSize="25sp"
+                android:text="@string/btn." />
 
             <Button
                 android:id="@+id/button31"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:textSize="25sp"
+                android:onClick="onBtnPlus"
+                android:text="@string/btnPlus" />
 
         </LinearLayout>
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button21"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="Button" />
+        <Button
+            android:id="@+id/button21"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="25sp"
+            android:text="@string/btnEq" />
 
-</LinearLayout>
+    </LinearLayout>
 
 
 
